grab Apache Commons Math because Math.round() is dumb

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,13 @@
       <version>0.9.0</version>
     </dependency>
 
+    <!-- Apache Commons -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.6.1</version>
+    </dependency>
+
   </dependencies>
 
 </project>
